# powerlaw

./: .buildinfo  .gitignore  .gitmodules  BCNI_MEG_mass_HDF5_conversion.py  HDF5_conversion.py  Helix_database.py  LICENSE  MRC_avalanche_analyses.py  Presentation_Figures_20110826.py  README.rst  RIKEN_ECOG_mass_HDF5_conversion.py  RIKEN_avalanche_analyses.py  RIKEN_avalanche_analyses_Helix.py  __init__.py  alpha_sigma.py  api.html  avalanches.py  create_database.py  criticality.py  database_classes.py  database_schema.txt  derivations_top.html  development_top.html  distributions.html  distributions_for_Christian.py  fit.html  genindex.html  human_import.py  index.html  input_processing.py  makeabunchoffigures.py  monkey_import.py  monkey_import_bedlewo1.py  monkey_import_helix.py  neuroscience.py  objects.inv  powerlaw.html  powerlaw.py  py-modindex.html  pyproject.toml  (+9 more)
.doctrees/: api.doctree  derivations_top.doctree  development_top.doctree  distributions.doctree  environment.pickle  fit.doctree  index.doctree  powerlaw.doctree  tutorials_top.doctree  utils.doctree
_modules/: index.html
_sources/: derivations_top.rst.txt  powerlaw.rst.txt  utils.rst.txt
_static/: documentation_options.js  overrides.css  pygments.css
derivations/: exponential.html  lognormal.html  power_law.html  stretched_exponential.html  truncated_power_law.html
development/: contributing.html
doc/: Makefile  conf.py  index.rst  make.bat
docs/: Makefile  conf.py  documentation_figures.ipynb  documentation_figures.py  readme.txt
manuscript/: FigCCDF.eps  FigCCDFmax.eps  FigD.eps  (+12 more)
(+174 files in other folders)
