[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerlaw"
dynamic = ["version"]
description = "Toolbox for testing if a probability distribution fits a power law"
readme = "README.rst"
authors = [
    {name = "Jeff Alstott", email = "jeffalstott@gmail.com"},
    {name = "Adam Ginsburg", email = "adam.g.ginsburg@gmail.com"},
    {name = "Jack Featherstone", email="jack.featherstone@proton.me"},
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.8"
dependencies = [
    "scipy",
    "numpy",
    "matplotlib",
    "mpmath",
    "tqdm"
]

[project.optional-dependencies]
docs = [
    "furo",
    "sphinx_subfigure",
    "numpydoc",
]

[project.urls]
Homepage = "http://www.github.com/jeffalstott/powerlaw"

[tool.setuptools]
py-modules = ["powerlaw"]

[tool.setuptools_scm]
write_to = "powerlaw/_version.py"
